# gosuto

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  build.rs  justfile  release-please-config.json
.githooks/: commit-msg
.github/workflows/: binaries-release.yml  ci.yml  msix-build.yml  release-binaries.yml  release-please.yml
docs/: architecture.md  matrixrtc-events.md  technical-debt.md  unit-test-plan.md
msix/: AppxManifest.xml  mapping.txt
src/: app.rs  cli.rs  config.rs  demo.rs  event.rs  fs_utils.rs  global_ptt.rs  main.rs  terminal.rs
src/app/: audio.rs  commands.rs  event_handler.rs  input_handler.rs  mod.rs  modal_keys.rs  tests.rs
src/input/: command.rs  handler.rs  insert.rs  mod.rs  normal.rs  vim.rs
src/matrix/: client.rs  credentials.rs  media.rs  message_parsing.rs  messages.rs  mod.rs  profile.rs  rooms.rs  session.rs  sync.rs  verification.rs
src/state/: audio_settings.rs  auth.rs  change_password.rs  create_room.rs  image_cache.rs  members.rs  messages.rs  mod.rs  recovery.rs  room_info.rs  rooms.rs  user_config.rs
src/ui/: animation.rs  audio_settings.rs  call_overlay.rs  change_password.rs  chat.rs  completion_popup.rs  configure.rs  create_room.rs  emoji_data.rs  form_field.rs  gradient.rs  icons.rs  input_bar.rs  invite_prompt.rs  layout.rs  login.rs  members.rs  mod.rs  panel.rs  popup.rs  reaction_picker.rs  recovery_modal.rs  redact_confirm.rs  rich_text.rs  room_info.rs  room_list.rs  status_bar.rs  theme.rs  tooltip.rs  typing_indicator.rs  verify_modal.rs  which_key.rs
src/ui/effects/: emp_pulse.rs  glitch.rs  matrix_rain.rs  message_rain.rs  mod.rs  text_reveal.rs
src/voip/: audio.rs  livekit.rs  manager.rs  matrixrtc.rs  mod.rs  signaling.rs  state.rs  turn.rs  webrtc.rs
