[package]
name = "gosuto"
version = "0.3.0"
edition = "2024"
description = "Gōsuto (ゴースト) — a cyberpunk terminal Matrix client with vim motions"
license = "Apache-2.0 OR MIT"
authors = ["Maik Buse"]
repository = "https://github.com/MaikBuse/gosuto"
homepage = "https://github.com/MaikBuse/gosuto"
readme = "README.md"
keywords = ["matrix", "tui", "chat", "terminal", "vim"]
categories = ["command-line-utilities"]
rust-version = "1.91"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Matrix
matrix-sdk = { version = "0.16", default-features = false, features = [
  "e2e-encryption",
  "automatic-room-key-forwarding",
  "bundled-sqlite",
  "rustls-tls",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"

# VoIP
livekit = { version = "0.7", features = ["rustls-tls-native-roots"] }
cpal = "0.17"
rubato = "0.16"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }

# Crypto
getrandom = "0.2"

# Utils
dirs = "6"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
unicode-width = "0.2"
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
url = "2.5.8"
base64 = "0.22"
arboard = "3"
rdev = { version = "0.5", features = ["unstable_grab"] }

# Inline images
ratatui-image = { version = "10", default-features = false, features = [
  "crossterm",
] }
image = "0.25"
