[package]
name = "gosuto"
version = "0.5.0"
edition = "2024"
description = "Gōsuto (ゴースト) — a cyberpunk terminal Matrix client with vim motions"
license = "Apache-2.0 OR MIT"
authors = ["Maik Buse"]
repository = "https://github.com/MaikBuse/gosuto"
homepage = "https://github.com/MaikBuse/gosuto"
readme = "README.md"
keywords = ["matrix", "tui", "chat", "terminal", "vim"]
categories = ["command-line-utilities"]
rust-version = "1.91"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Matrix
matrix-sdk = { version = "0.16", default-features = false, features = [
  "e2e-encryption",
  "automatic-room-key-forwarding",
  "bundled-sqlite",
  "rustls-tls",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"

# VoIP
livekit = { version = "0.7", features = ["rustls-tls-native-roots"] }
cpal = "0.17"
rubato = "1"
audioadapter-buffers = "2"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.13", default-features = false, features = [
  "rustls",
  "json",
] }

# Crypto
getrandom = "0.4"

# Synchronization
parking_lot = "0.12"

# Utils
dirs = "6"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
unicode-width = "0.2"
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
url = "2.5.8"
base64 = "0.22"
arboard = "3"

# Inline images
ratatui-image = { version = "10", default-features = false, features = [
  "crossterm",
] }
image = "0.25"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13"
nix = { version = "0.31", features = ["poll"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
rdev = "0.5"
